<resources>
    <string name="app_name">Covid Care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="emergencycall">Emergency Call</string>
    <string name="sign_in_register">Sign In /Register</string>
    <string name="lets_fight_together">Lets Fight together</string>
    <string name="bed_avilability">Bed Availability</string>
    <string name="state">State:</string>
    <string name="update">Update</string>
    <string name="region">Region : </string>
    <string name="hospital_name_">Hospital Name:</string>
    <string name="number_of_beds">Number Of Beds:</string>
    <string name="covid_care">Call Covid-19 Helpline</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="admin_options">Admin Options</string>
    <string name="hospitals_information"><u>Hospitals Information</u></string>
    <string name="cases_in_india"><u>Cases in India</u></string>
    <string name="phonenumber">Phone Number</string>
    <string name="add">Add</string>
    <string name="update_bed_availability_details"><u>Update bed availability details</u></string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="address">Address:</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_or_delete_admin"><u>Add or delete admin</u></string>
    <string name="delete_hospital_detail"><u>Delete Hospital detail</u></string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="about_content">\tThis is a app which helps in tracking number of beds available in different hospitals of different places in India.\n\n\tIn continuation to initiative taken by government to help COVID-19 infected patients. We are aiming to give updates about number of beds available in hospitals that treat COVID patients. </string>
    <string name="fui_progress_dialog_signing_up">Creating your shiny new account...</string>
    <string name="confirmed_n">Confirmed:\n</string>
    <string name="recovered_n">Recovered:\n</string>
    <string name="death_n">Death:\n</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_">Phone Number :</string>
</resources>
