<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/emergencyCall"
            android:icon="@drawable/emergency_call"
            android:title="@string/covid_care" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_launcher_background"
            android:title="Log Out" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/admin"
            android:title="@string/admin_options" />
    </group>


</menu>
