<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".activities.AdminOptions">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="50dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_box"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cookie_regular"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:text="Add or delete admin"
                    />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_box"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:hint="Phone Number / Email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:onClick="onClickAdd"
                        android:background="@color/colorAccent"
                        android:textColor="@color/button_text"
                        android:text="@string/add" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:onClick="onClickDeleteAdmin"
                        android:background="@color/colorAccent"
                        android:textColor="@color/button_text"
                        android:text="@string/delete" />

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/cardBackground"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/outline_box"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:fontFamily="@font/cookie_regular"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/update_bed_availability_details"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textSize="18sp"
                        android:text="@string/region"
                        />

                    <Spinner
                        android:id="@+id/selectStatesSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="20sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/HospitalNameAdminOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_box"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:hint="@string/hospital_name_" />

                <EditText
                    android:id="@+id/BedAvailabilityAdminOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_box"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:hint="@string/bed_avilability"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/AddressAdminOptions"
                    android:layout_width="match_parent"
                    android:background="@drawable/outline_box"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:hint="Address"
                    android:inputType="textMultiLine" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:onClick="onClickUpdate"
                    android:background="@color/colorAccent"
                    android:textColor="@color/button_text"
                    android:text="@string/update" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/cardBackground"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/outline_box"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textcolor"
                    android:textStyle="bold"
                    android:fontFamily="@font/cookie_regular"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="Delete Hospital detail"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textSize="18sp"
                        android:text="@string/region"
                        />

                    <Spinner
                        android:id="@+id/SpinnerForDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="20sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/HospitalNameToDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_box"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:hint="@string/hospital_name_" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:onClick="onClickDeleteHospital"
                    android:background="@color/colorAccent"
                    android:textColor="@color/button_text"
                    android:text="@string/delete" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</ScrollView>