<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="55dp"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressbar_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cookie_regular"
            android:text="@string/cases_in_india"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/textcolor"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <androidx.cardview.widget.CardView
            android:layout_width="0px"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#3333FF"
            android:layout_weight="1">

            <TextView
                android:id="@+id/Confirmed_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:text="Confirmed:\n" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0px"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#32CD32"
            android:layout_weight="1">

            <TextView
                android:id="@+id/RecoveredCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:text="Recovered:\n" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0px"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardElevation="50dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#FF0000"
            android:layout_weight="1">

            <TextView
                android:id="@+id/DeathCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:text="Death:\n" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1sp"
           android:background="@color/textcolor"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/tangerine_bold"
            android:gravity="center"
            android:text="@string/hospitals_information"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/textcolor"
            android:textSize="40sp" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/textcolor"
            android:text="@string/region" />

        <Spinner
            android:id="@+id/selectStatesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewHospitalView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>